--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.8",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
-    "sequelize": "^6.25.8",
-    "mongoose": "^7.0.3"
+    "method-override": "^3.0.0",
+    "mongoose": "^7.0.3",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "sequelize": "^6.25.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
