--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.8",
     "express": "^4.17.1",
+    "greenlock-express": "^4.0.3",
     "method-override": "^3.0.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.4",
